update some building

--- a/jupyterbook/references.bib
+++ b/jupyterbook/references.bib
@@ -504,7 +504,7 @@
   language  = "en"
 }
 
-@MISC{UnknownUnknown-ll,
+@MISC{solmates,
   title        = "Solmates B.V. (n.d.). Homepage",
   howpublished = "https://www.solmates.nl/",
   note         = "Accessed: 2025-5-28"
