results and discussion

--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -60,7 +60,7 @@
     "At its core, our platform leverages the Shimadzu HyperVision HPX-2 high-speed camera, distinguished by its ability to record bursts of up to 128 frames at exceptional temporal resolutions approaching 10 million frames per second. \n",
     "\n",
     "$\\text{SrRuO}_3$ thin films were selected as a representative model system due to their widespread use as functional electrode layers in oxide electronics, where their ferromagnetic and conductive properties can be critical for enabling spintronic devices and high-performance heterostructures{cite:p}`Klein1996-ws,Samanta2021-hg,Agrestini2015-ht,Gu2022-fu,Cuoco2022-jz,Jeong2023-yk,Ou2019-yt`.\n",
-    "$\\text{SrRuO}_3$ exhibits several advantageous properties, including temperature-dependent electrical conductivity{cite:p}`Klein1996-ws,Koster2012-ds,Mackenzie1998-rn`, favorable lattice matching to a range of substrates (orthorhombic unit cell: $a = 5.560~\\text{\\AA},\\ b = 5.530~\\text{\\AA},\\ c = 7.845~\\text{\\AA}$), and exceptional structural stability, making it highly suitable for integration into multilayer oxide architectures and ferroelectric devices. \n",
+    "$\\text{SrRuO}_3$ exhibits several advantageous properties, including temperature-dependent electrical conductivity{cite:p}`Klein1996-ws,Koster2012-ds,Mackenzie1998-rn`, favorable lattice matching to a range of substrates (orthorhombic unit cell: $a = 5.560\\ \\text{Å},\\ b = 5.530\\ \\text{Å},\\ c = 7.845\\ \\text{Å}$), and exceptional structural stability, making it highly suitable for integration into multilayer oxide architectures and ferroelectric devices. \n",
     "Furthermore, $\\text{SrRuO}_3$ displays notable magnetic and electronic phenomena, such as the anomalous Hall effect near 160 K{cite:p}`Allen1996-za`, achievable without extrinsic doping in both bulk and epitaxial thin-film forms. Its high thermal stability (up to ~1200 K{cite:p}`Eom1993-vs`) and robust chemical resilience. \n",
     "Finally, $\\text{SrRuO}_3$ is widely employed as a lattice-matched oxide electrode in ferroelectric devices, where its crystallographic and electronic properties critically influence heterostructure morphology, functional responses, and device performance through mechanisms such as strain transfer and interfacial electronic screening.\n",
     "\n",
@@ -81,8 +81,10 @@
     "They are regularly visible to the naked eye, allowing direct observation of significant changes in plume size, which serve as an indicator of the time-averaged emissivity of the plume. \n",
     "Nevertheless, the systematic, high-resolution spatiotemporal mapping of these phenomena remains largely unexplored-primarily due to the absence of diagnostic infrastructure capable of capturing these dynamics *in operando*.\n",
     "We investigate two perturbative conditions: \n",
+    "\n",
     "1. Varying pre-ablation pulse counts to probe ablation history effects on plume dynamics and film crystallinity\n",
     "2. Introducing controlled surface contamination to simulate stoichiometric and defect inhomogeneity. \n",
+    "\n",
     "Utilizing a full-frame PDI platform with high-speed imaging, we capture temporally resolved, single-pulse plume dynamics, eliminating the need for ensemble averaging. This enables quantitative extraction of plume velocity, emission area, and intensity, which we correlate with structural and electronic properties of $\\text{SrRuO}_3$ films grown on $\\text{SrTiO}_3${cite:p}`Kawasaki1994-yz`. \n",
     "Integration of plume metrics with machine learning provides a framework for real-time feedback and process control, advancing toward autonomous, closed-loop thin-film synthesis. This approach holds the potential to enable access to architected oxide materials previously inaccessible via conventional PLD workflows."
    ]
@@ -93,7 +95,14 @@
    "source": [
     "## Results and Discussion\n",
     "\n",
-    "Five $ \\text{SrRuO}_3/\\text{SrTiO}_3 $ thin films (denoted as growth G1-G5) were sequentially deposited using the same SrRuO$_3$ target without sanding or restoring the target surface between growth while keeping all other deposition conditions constant  ({numref}`figure1`a-e). This set of samples was used to evaluate the effects of progressive target surface degradation on film growth. In addition, a separate comparison was made between a film deposited using sample G5 with a film deposited using the same target after subsequent growth of other chemistries (denoted as contaminated growth C-G6, {numref}`figure1`a-f). We further explore how spatial variations in the target’s surface chemistry and morphology influence the resulting film properties with G5 and C-G6. All films were grown under identical and optimized deposition conditions, with the only variable being the condition of the target surface ({numref}`figure1`g). The substrate temperature was maintained at $ 700^\\circ \\text{C} $, and deposition was carried out at a background pressure of 100 mTorr in an oxygen atmosphere, using a laser fluence of $ 1.6 \\, \\text{mJ/cm}^2 $. These parameters align with reported values in prior studies. The laser spot employed in our experiments had a rectangular shape, measuring 0.93 mm in width and 2.46 mm in height. A computer-controlled motion scanner was used to evenly ablate the target surface. Additional experimental details are outlined in the section 6.5."
+    "Five $ \\text{SrRuO}_3/\\text{SrTiO}_3 (001)$ thin films (denoted as growth G1-G5) were sequentially deposited using the same \\text{SrRuO}_3 target without sanding or restoring the target surface between growth while keeping all other deposition conditions constant ({numref}`figure1`a-e). \n",
+    "This set of samples was used to evaluate the effects of progressive target surface degradation on film growth. In addition, a separate comparison was made between a film deposited using sample G5 with a film deposited using the same target after subsequent growth of other chemistries (denoted as contaminated growth C-G6, {numref}`figure1`a-f). \n",
+    "We further explore how spatial variations in the target’s surface chemistry and morphology influence the resulting film properties with G5 and C-G6. All films were grown under identical and optimized deposition conditions, with the only variable being the condition of the target surface ({numref}`figure1`g). \n",
+    "The substrate temperature was maintained at $ 700^\\circ \\text{C}$, and deposition was carried out at a background pressure of 100 $\\text{mTorr}$ in an oxygen atmosphere, using a laser fluence of $ 1.6 \\, \\text{mJ/cm}^2 $. \n",
+    "These parameters align with reported values in prior studies. \n",
+    "The laser spot employed in our experiments had a rectangular shape, measuring 0.93 mm in width and 2.46 $\\text{mm}$ in height. \n",
+    "A computer-controlled motion scanner was used to evenly ablate the target surface. Additional experimental details are outlined in the section 6.5.\n",
+    "<!-- TODO: add reference here to 6.5 -->"
    ]
   },
   {
