--- a/jupyterbook/references.bib
+++ b/jupyterbook/references.bib
@@ -2417,3 +2417,100 @@
   year     =  1996,
   language = "en"
 }
+
+
+@ARTICLE{Kar2021-oy,
+  title     = "High-sensitivity of initial {SrO} growth on the residual
+               resistivity in epitaxial thin films of {SrRuO[Formula}: see text]
+               on {SrTiO[Formula}: see text] (001)",
+  author    = "Kar, Uddipta and Singh, Akhilesh Kr and Yang, Song and Lin,
+               Chun-Yen and Das, Bipul and Hsu, Chia-Hung and Lee, Wei-Li",
+  journal   = "Scientific reports",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  11,
+  number    =  1,
+  pages     =  16070,
+  abstract  = "AbstractThe growth of SrRuO$$\_3$$ 3 (SRO) thin film with
+               high-crystallinity and low residual resistivity (RR) is essential
+               to explore its intrinsic properties. Here, utilizing the
+               adsorption-controlled growth technique, the growth condition of
+               initial SrO layer on TiO$$\_2$$ 2 -terminated SrTiO$$\_3$$ 3
+               (STO) (001) substrate was found to be crucial for achieving a low
+               RR in the resulting SRO film grown afterward. The optimized
+               initial SrO layer shows a c(2 $$\times $$ × 2) superstructure
+               that was characterized by electron diffraction, and a series of
+               SRO films with different thicknesses (ts) were then grown. The
+               resulting SRO films exhibit excellent crystallinity with
+               orthorhombic-phase down to $$t \approx $$ t ≈ 4.3 nm, which was
+               confirmed by high resolution X-ray measurements. From X-ray
+               azimuthal scan across SRO orthorhombic (02 ± 1) reflections, we
+               uncover four structural domains with a dominant domain of
+               orthorhombic SRO [001] along cubic STO [010] direction. The
+               dominant domain population depends on t, STO miscut angle
+               ($$\alpha $$ α ), and miscut direction ($$\beta $$ β ), giving a
+               volume fraction of about 92 $$\%$$ \% for $$t \approx $$ t ≈ 26.6
+               nm and $$(\alpha , \beta ) \approx $$ ( α , β ) ≈
+               (0.14$$\textasciicircum{\mathrm{o}}$$ o ,
+               5$$\textasciicircum{\mathrm{o}}$$ o ). On the other hand,
+               metallic and ferromagnetic properties were well preserved down to
+               t$$\approx $$ ≈ 1.2 nm. Residual resistivity ratio (RRR = $$\rho
+               ({\mathrm{300 K}})$$ ρ ( 300 K ) /$$\rho ({\mathrm{5K}})$$ ρ ( 5
+               K ) ) reduces from 77.1 for t$$\approx $$ ≈ 28.5 nm to 2.5 for
+               t$$\approx $$ ≈ 1.2 nm, while $$\rho ({\mathrm{5K}})$$ ρ ( 5 K )
+               increases from 2.5 $$\upmu \Omega $$ μ Ω cm for t$$\approx $$ ≈
+               28.5 nm to 131.0 $$\upmu \Omega $$ μ Ω cm for t$$\approx $$ ≈ 1.2
+               nm. The ferromagnetic onset temperature ($$T'\_{\mathrm{c}}$$ T c
+               ′ ) of around 151 K remains nearly unchanged down to t$$\approx
+               $$ ≈ 9.0 nm and decreases to 90 K for t$$\approx $$ ≈ 1.2 nm. Our
+               finding thus provides a practical guideline to achieve high
+               crystallinity and low RR in ultra-thin SRO films by simply
+               adjusting the growth of initial SrO layer.",
+  month     =  "9~" # aug,
+  year      =  2021,
+  url       = "https://www.nature.com/articles/s41598-021-95554-x",
+  doi       = "10.1038/s41598-021-95554-x",
+  pmc       = "PMC8352924",
+  pmid      =  34373527,
+  issn      = "2045-2322,2045-2322",
+  language  = "en"
+},
+
+@ARTICLE{Kawasaki1994-yz,
+  title    = "Atomic Control of the {SrTiO}$_{3}$ Crystal Surface",
+  author   = "Kawasaki, M and Takahashi, K and Maeda, T and Tsuchiya, R and
+              Shinohara, M and Ishiyama, O and Yonezawa, T and Yoshimoto, M and
+              Koinuma, H",
+  journal  = "Science",
+  volume   =  266,
+  number   =  5190,
+  pages    = "1540--1542",
+  abstract = "The atomically smooth SrTiO(3) (100) with steps one unit cell in
+              height was obtained by treating the crystal surface with a
+              pH-controlled NH(4)F-HF solution. The homoepitaxy of SrTiO(3) film
+              on the crystal surface proceeds in a perfect layer-by-layer mode
+              as verified by reflection high-energy electron diffraction and
+              atomic force microscopy. Ion scattering spectroscopy revealed that
+              the TiO(2) atomic plane terminated the as-treated clean surface
+              and that the terminating atomic layer could be tuned to the SrO
+              atomic plane by homooepitaxial growth. This technology provides a
+              well-defined substrate surface for atomically regulated epitaxial
+              growth of such perovskite oxide films as YBa(2)Cu(3)O(7-delta).",
+  month    =  "2~" # dec,
+  year     =  1994,
+  url      = "http://dx.doi.org/10.1126/science.266.5190.1540",
+  doi      = "10.1126/science.266.5190.1540",
+  pmid     =  17841713,
+  issn     = "0036-8075",
+  language = "en"
+}
+
+@article{Eom1993-vs,
+author = {Eom, Chang-Beom and van Dover, Robert and Phillips, J.M. and Werder, Don and Marshall, J. and Chen, Changhua and Cava, R. and Fleming, Robert and Fork, David},
+year = {1993},
+month = {12},
+pages = {2570 - 2572},
+title = {Fabrication and Properties of Epitaxial Ferroelectric Heterostructures with (SrRuO3) Isotropic Metallic Oxide Electrodes},
+volume = {63},
+journal = {Applied Physics Letters},
+doi = {10.1063/1.110436}
+}
