upload figures and update in notebooks

--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -114,7 +114,7 @@
    },
    "source": [
     ":::{figure-md} figure1\n",
-    "<img src=\"./figures/1-Samples.png\" style=\"height:200px; width:auto;\">\n",
+    "<img src=\"../figures/Figure1-Samples_experiment_setup.png\" style=\"width:auto;\">\n",
     "\n",
     "a-f Schematic image of targets used for growths.\n",
     ":::"
