update notebooks with some information

--- a/notebooks/2_PLD_Experiment_Design.ipynb
+++ b/notebooks/2_PLD_Experiment_Design.ipynb
@@ -26,13 +26,7 @@
     "%autoreload 2\n",
     "import os\n",
     "os.environ['ETS_TOOLKIT'] = 'qt'\n",
-    "import glob\n",
-    "import matplotlib.pyplot as plt \n",
-    "from IPython.display import SVG, display\n",
-    "\n",
-    "from plume_learn.plume_analyzer.analyze_function import load_plumes_and_align\n",
-    "from m3util.viz.layout import layout_fig, layout_subfigures_inches\n",
-    "from m3util.viz.text import labelfigs, add_text_to_figure"
+    "import matplotlib.pyplot as plt \n"
    ]
   },
   {
