build with some changes

--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -118,23 +118,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "X-ray diffraction (XRD) scans were conducted to characterize the structural differences among the films. Reciprocal space maps (RSMs) collected along the SrTiO$_3$ (002) diffraction direction ({numref}`figure2`a–f) show high intensity and narrow width of SrRuO$_3$ film peaks, indicating all samples are high-quality epitaxial films. From sample G1 to G5, the SrRuO$_3$ diffraction peak becomes increasingly intense and narrower, while the periodic Laue oscillations surrounding the main peak become more distinct. These observations suggest improved crystalline coherence, sharper interfaces, and uniformity in unit cell alignment throughout the deposition sequence.\n",
+    "X-ray diffraction (XRD) scans were conducted to characterize the structural differences among the films. Reciprocal space maps (RSMs) collected along the SrTiO$_3$ (002) diffraction direction ({numref}`figure2`a–f) show high intensity and narrow width of $\\text{SrRuO}_3$ film peaks, indicating all samples are high-quality epitaxial films. From sample G1 to G5, the $\\text{SrRuO}_3$ diffraction peak becomes increasingly intense and narrower, while the periodic Laue oscillations surrounding the main peak become more distinct. These observations suggest improved crystalline coherence, sharper interfaces, and uniformity in unit cell alignment throughout the deposition sequence.\n",
     "The comparison between sample G5 and C-G6 further reinforces this trend: sample G5 exhibits significantly sharper and more defined features, indicating superior thin film quality compared to C-G6, which suffers from lower crystal coherence likely due to target surface contamination.\n",
     "\n",
-    "To support these findings, $2\\theta$–$\\omega$ scans were performed ({numref}`figure2`a), revealing consistent SrRuO$_3$ (002) reflections near 45.91° across all samples, with minor variations in peak position. Laue fringes are clearly visible for all samples and were used to estimate film thicknesses: 79.69 $\\text{nm}$ (G1), 69.33 $\\text{nm}$ (G2), 69.33 $\\text{nm}$ (G3), 70.15 $\\text{nm}$ (G4), 71.65 $\\text{nm}$ (G5), and 67.24 $\\text{nm}$ (C-G6). These values confirm nearly constant growth rates across the series, reflecting the uniformity of deposition conditions (12,375 laser pulses). Although Laue fringes are not a quantitative measure, they offer qualitative insight into crystalline and interface quality. The increasing prominence of fringes in later depositions (G1–G6)—consistent with the (002) RSMs—suggests enhanced structural coherence, likely due to gradual stabilization of the target surface through repeated ablation.\n",
+    "To support these findings, $2\\theta$–$\\omega$ scans were performed ({numref}`figure2`a), revealing consistent $\\text{SrRuO}_3$ (002) reflections near 45.91° across all samples, with minor variations in peak position. Laue fringes are clearly visible for all samples and were used to estimate film thicknesses: 79.69 $\\text{nm}$ (G1), 69.33 $\\text{nm}$ (G2), 69.33 $\\text{nm}$ (G3), 70.15 $\\text{nm}$ (G4), 71.65 $\\text{nm}$ (G5), and 67.24 $\\text{nm}$ (C-G6). These values confirm nearly constant growth rates across the series, reflecting the uniformity of deposition conditions (12,375 laser pulses). Although Laue fringes are not a quantitative measure, they offer qualitative insight into crystalline and interface quality. The increasing prominence of fringes in later depositions (G1–G6)—consistent with the (002) RSMs—suggests enhanced structural coherence, likely due to gradual stabilization of the target surface through repeated ablation.\n",
     "\n",
-    "Notably, sample G4 exhibits distinct peak splitting in both the film and substrate signals, forming two or more clusters. This behavior is attributed to twinning within the SrTiO$_3$ substrate, which introduces slight crystallographic misalignments along the (103) diffraction direction. These twin domains generate multiple peaks along the Q$_x$ axis, resulting in the observed splitting in the SrRuO$_3$ thin film signal. It is worth noting that such twinning is commonly observed in commercially available SrTiO$_3$ substrates, particularly those of non-ideal quality.\n",
+    "Notably, sample G4 exhibits distinct peak splitting in both the film and substrate signals, forming two or more clusters. This behavior is attributed to twinning within the SrTiO$_3$ substrate, which introduces slight crystallographic misalignments along the (103) diffraction direction. These twin domains generate multiple peaks along the Q$_x$ axis, resulting in the observed splitting in the $\\text{SrRuO}_3$ thin film signal. It is worth noting that such twinning is commonly observed in commercially available SrTiO$_3$ substrates, particularly those of non-ideal quality.\n",
     "\n",
-    "Crystalline quality was further evaluated through $\\omega$ rocking curve scans ({numref}`figure2`b) around the SrRuO$_3$ (220) peak, where the full width at half maximum (FWHM) of the diffraction peaks was used as a quantitative metric. A clear trend of decreasing FWHM from sample t1 to t5 indicates progressive improvement in film crystallinity, corroborating the structural trends observed in the RSM and $2\\theta$–$\\omega$ analyses. Comparing samples s1 and s2 again highlights the negative impact of target contamination, with sample s2 exhibiting broader peaks and reduced diffraction intensity.\n",
+    "Crystalline quality was further evaluated through $\\omega$ rocking curve scans ({numref}`figure2`b) around the $\\text{SrRuO}_3$ (220) peak, where the full width at half maximum (FWHM) of the diffraction peaks was used as a quantitative metric. A clear trend of decreasing FWHM from sample t1 to t5 indicates progressive improvement in film crystallinity, corroborating the structural trends observed in the RSM and $2\\theta$–$\\omega$ analyses. Comparing samples s1 and s2 again highlights the negative impact of target contamination, with sample s2 exhibiting broader peaks and reduced diffraction intensity.\n",
     "\n",
-    "In addition, RSMs along the asymmetric SrTiO$_3$ (103) reflection ({numref}`figure2`i–n) confirm the overall high structural quality of the films. The (103) maps show that all SrRuO$_3$ thin films are coherently strained to the SrTiO$_3$ substrate, as evidenced by the alignment of in-plane lattice parameters in reciprocal space. An exception is observed in sample G1, which exhibits partial relaxation, as indicated by asymmetry and peak broadening along the lower Q$_x$ direction. The out-of-plane diffraction peaks are distorted from bulk SrRuO$_3$, indicating that the films are under compressive strain, have defect-induced lattice expansion, or both.\n",
+    "In addition, RSMs along the asymmetric SrTiO$_3$ (103) reflection ({numref}`figure2`i–n) confirm the overall high structural quality of the films. The (103) maps show that all $\\text{SrRuO}_3$ thin films are coherently strained to the SrTiO$_3$ substrate, as evidenced by the alignment of in-plane lattice parameters in reciprocal space. An exception is observed in sample G1, which exhibits partial relaxation, as indicated by asymmetry and peak broadening along the lower Q$_x$ direction. The out-of-plane diffraction peaks are distorted from bulk $\\text{SrRuO}_3$, indicating that the films are under compressive strain, have defect-induced lattice expansion, or both.\n",
     "By fitting the diffraction peaks, we extract the in-plane (Q$_x$) and out-of-plane (Q$_z$) lattice parameters for the samples as follows:\n",
-    "- **G1**: Q$_x$ = 1.6127 $\\text{nm}$, Q$_z$ = 4.7825 $\\text{nm}$  \n",
-    "- **G2**: Q$_x$ = 1.6097 $\\text{nm}$, Q$_z$ = 4.7862 $\\text{nm}$  \n",
-    "- **G3**: Q$_x$ = 1.6091 $\\text{nm}$, Q$_z$ = 4.7862 $\\text{nm}$  \n",
-    "- **G4**: Q$_x$ = 1.6082 $\\text{nm}$, Q$_z$ = 4.7859 $\\text{nm}$  \n",
-    "- **G5**: Q$_x$ = 1.6094 $\\text{nm}$, Q$_z$ = 4.7834 $\\text{nm}$  \n",
-    "- **C-G6**: Q$_x$ = 1.6087 $\\text{nm}$, Q$_z$ = 4.7861 $\\text{nm}$\n",
+    " \n",
+    "| Sample | Q$_x$ (nm) | Q$_z$ (nm) |\n",
+    "|--------|------------|------------|\n",
+    "| **G1** | 1.6127     | 4.7825     |\n",
+    "| **G2** | 1.6097     | 4.7862     |\n",
+    "| **G3** | 1.6091     | 4.7862     |\n",
+    "| **G4** | 1.6082     | 4.7859     |\n",
+    "| **G5** | 1.6094     | 4.7834     |\n",
+    "| **C-G6** | 1.6087   | 4.7861     |\n",
+    "\n",
     "Interestingly, consistent Q$_z$ positioning across all samples reinforces that changes in film quality are more closely tied to smooth, flat interfaces, uniform surface, and crystalline coherence."
    ]
   },
@@ -149,12 +153,7 @@
     ":::{figure-md} figure2\n",
     "<img src=\"../figures/Figure2-XRD_RSM.png\" style=\"width:auto;\">\n",
     "\n",
-    "X-ray diffraction (XRD) and reciprocal space mapping (RSM) results.  \n",
-    "(a) $2\\theta$ scans for samples G1–G5, with peaks of SrRuO$_3$ thin films, SrTiO$_3$ substrates, and bulk SrRuO$_3$ labeled.  \n",
-    "(b) X-ray $\\omega$ rocking curve scans for the samples, with full width at half maximum (FWHM) plotted in the inset at the top right corner.  \n",
-    "(c–h) RSMs along the (103) diffraction condition for samples t1, t2, t3, t4, t5/s1, and s2, respectively.  \n",
-    "(i–n) RSMs along the (002) diffraction condition for samples t1, t2, t3, t4, t5/s1, and s2, respectively.  \n",
-    "SrRuO$_3$ peak centers are labeled with red “+” markers in all RSMs. The reference position for well-strained SrRuO$_3$ is indicated by blue dashed lines.\n",
+    "X-ray diffraction (XRD) and reciprocal space mapping (RSM) results. (a) $2\\theta$ scans for samples G1–G5, with peaks of $\\text{SrRuO}_3$ thin films, SrTiO$_3$ substrates, and bulk $\\text{SrRuO}_3$ labeled. (b) X-ray $\\omega$ rocking curve scans for the samples, with full width at half maximum (FWHM) plotted in the inset at the top right corner. (c–h) RSMs along the (103) diffraction condition for samples t1, t2, t3, t4, t5/s1, and s2, respectively. (i–n) RSMs along the (002) diffraction condition for samples t1, t2, t3, t4, t5/s1, and s2, respectively. $\\text{SrRuO}_3$ peak centers are labeled with red “+” markers in all RSMs. The reference position for well-strained $\\text{SrRuO}_3$ is indicated by blue dashed lines.\n",
     ":::"
    ]
   },
@@ -168,7 +167,7 @@
    "source": [
     "Additionally, the surface morphology of the films was characterized using tapping mode atomic force microscopy (AFM) ({numref}`figure3`). A comparison of samples G1 through G5 reveals a progressive decrease in surface roughness with each subsequent deposition. This trend is accompanied by a noticeable reduction in the density of surface pits or holes. Such holes are typically attributed to insufficient deposition rates. Paradoxically, however, one would expect a slight reduction in growth rate with successive depositions until a steady state is reached. Counterintuitively—and despite current understanding of plume dynamics evolution—the observed morphology is often proposed to be mitigated by increasing the growth rate, which can be achieved through higher laser repetition rates, increased fluence, or lower ambient pressure.\n",
     "\n",
-    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3g`) revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of SrRuO$_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
+    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3g`) revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of $\\text{SrRuO}_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
     "\n",
     "Distinct differences in growth mode were also observed among the samples. In {numref}`figure3a`, the surface exhibits an island-like step-flow morphology, where step orientation appears to radiate from the center of circular clusters. This results in hybrid growth behavior combining features of both 2D and 3D growth. In contrast, {numref}`figure3c` and {numref}`figure3f` show step bunching, where several atomic steps coalesce to form terraces of greater height at irregular intervals. These features are more clearly resolved in the larger-area (10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$) image of {numref}`figure3a` and the higher-resolution (5 $\\mu\\text{m}$ × 5 $\\mu\\text{m}$) scans in {numref}`figureS1` . Deviations from uniform step-flow growth—such as island nucleation or step bunching—are often associated with less desirable film quality.\n"
    ]
@@ -184,8 +183,7 @@
     ":::{figure-md} figure3\n",
     "<img src=\"../figures/Figure3-AFM_10um.png\" style=\"width:auto;\">\n",
     "\n",
-    "(a–f) AFM scans of 10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$ areas of samples t1–t5 (s1) and s2.  \n",
-    "(g) Surface roughness calculated based on the 10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$ areas of the samples.\n",
+    "(a–f) AFM scans of 10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$ areas of samples t1–t5 (s1) and s2. (g) Surface roughness calculated based on the 10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$ areas of the samples.\n",
     ":::"
    ]
   },
@@ -248,10 +246,7 @@
     ":::{figure-md} figure4\n",
     "<img src=\"../figures/Figure4-Plume_area_distance_velocity_average.png\" style=\"width:auto;\">\n",
     "\n",
-    "Plume sample frames and the plume metrics for plume description and evaluation.  \n",
-    "(a) Plume area over time for samples G1–t5 (s1) and C-G6. A series of plume images are included as examples to illustrate how plume area is determined.  \n",
-    "(b) Plume transport distance over time. Example plume images are also shown with markers indicating plume position.  \n",
-    "(c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.\n",
+    "Plume sample frames and the plume metrics for plume description and evaluation. (a) Plume area over time for samples G1–t5 (s1) and C-G6. A series of plume images are included as examples to illustrate how plume area is determined. (b) Plume transport distance over time. Example plume images are also shown with markers indicating plume position. (c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.(c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.\n",
     ":::\n"
    ]
   },
@@ -272,7 +267,7 @@
     "\n",
     "### Plume Dynamics Correlation with Time-Resolved Target Surface\n",
     "\n",
-    "To investigate how laser ablation–induced changes in target surface morphology influence the quality of SrRuO$_3$ thin films, we analyzed plume dynamics across sequentially deposited samples G1–G5. While the average plume area, travel distance, and incident velocity appear broadly similar across these samples, this superficial uniformity underscores the importance of statistical analysis to detect subtle but potentially significant variations in plume behavior during deposition.\n",
+    "To investigate how laser ablation–induced changes in target surface morphology influence the quality of $\\text{SrRuO}_3$ thin films, we analyzed plume dynamics across sequentially deposited samples G1–G5. While the average plume area, travel distance, and incident velocity appear broadly similar across these samples, this superficial uniformity underscores the importance of statistical analysis to detect subtle but potentially significant variations in plume behavior during deposition.\n",
     "\n",
     "To that end, we focused on two critical metrics: maximum plume area and incident velocity. These metrics are statistically represented using violin plots in {numref}`figure5`."
    ]
